--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,16 @@ jobs:
       - name: Grant Execute Permission to Gradlew
         run: chmod +x ./gradlew
 
+      - name: Increment Version Code
+        run: |
+          VERSION_CODE=$(grep VERSION_CODE version.properties | cut -d'=' -f2)
+          NEW_VERSION_CODE=$((VERSION_CODE + 1))
+          sed -i "s/VERSION_CODE=$VERSION_CODE/VERSION_CODE=$NEW_VERSION_CODE/" version.properties
+          git config user.name "Raghavendra19910926"
+          git config user.email "raghaven19910926@gmail.com"
+          git commit -am "Increment version code to $NEW_VERSION_CODE"
+          git push
+        
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
