--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV    
                 
-      - name: Build Signed AAB
-        run: ./gradlew bundleRelease  # This creates an .aab file
+      - name: Build Signed APK
+        run: ./gradlew assembleRelease  
 
       - name: List build outputs
         run: ls -R app/build/outputs
@@ -55,5 +55,5 @@ jobs:
         with:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
-          file: app/build/outputs/bundle/release/app-release.aab
+          file: app/build/outputs/apk/release/app-release.apk
           groups: testers
